--- a/public/pages/index.html
+++ b/public/pages/index.html
@@ -26,7 +26,7 @@
         <ul class="nav_list">
             <li>
                 <i class="fa-solid fa-magnifying-glass"></i>
-                <input type="text" placeholder="Search">
+                <input type="text" placeholder="Search...">
                 <!-- <span class="tooltip">Dashboard</span> -->
             </li>
             <li>
