:sparkles: feat(index.html): Add section for content

--- a/public/pages/index.html
+++ b/public/pages/index.html
@@ -99,6 +99,9 @@
             </div>
         </div>
     </div>
+    <div class="home_content">
+        <div class="text">Home Content</div>
+    </div>
 </body>
 
 </html>
